--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 
     </div>
 
+    <script id="movie-template" type="text/x-handlebars-template">
+
+      <ul list-item="{{movie}}">
+        <li class="title">Titolo:{{title}}</li>
+        <li class="original_title">Titolo orignale:{{original_title}}</li>
+        <li class="original_language">Lingua originale:{{original_language}}</li>
+        <li class="vote_average">Voto:{{vote_average}}</li>
+      </ul>
+
+    </script>
+
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
