--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
     </div>
 
-    <script id="movie-template" type="text/x-handlebars-template">
+    <script id="entry-template" type="text/x-handlebars-template">
 
       <ul list-item="{{movie}}">
         <li class="title">Titolo:{{title}}</li>
         <li class="original_title">Titolo orignale:{{original_title}}</li>
-        <li class="original_language flag">Lingua originale: {{{original_language}}}</li>
+        <li class="original_language flag">Lingua: {{{original_language}}}</li>
         <li class="vote_average"> Voto:  {{{vote_average}}}  </li>
       </ul>
 
