--- a/index.html
+++ b/index.html
@@ -25,19 +25,10 @@
     <button id="search" type="button" name="button">Search</button> -->
 
     <div class="container clearfix">
-      <!-- <h2 class="b">Film</h2> -->
-      <div class="film b">
-
-      </div>
-      <!-- <h2 class="b">Serie tv</h2> -->
-      <div class="tv b">
-
-      </div>
-
 
     </div>
 
-    <script id="entry-template" type="text/x-handlebars-template">
+    <!-- <script id="entry-template" type="text/x-handlebars-template">
 
       <div class="item">
         <ul list-item="{{movie}}" class="b">
@@ -48,6 +39,25 @@
           <li class="original_language flag"> <strong>Lingua:</strong> {{{original_language}}}</li>
           <li class="vote_average y"> <span class="b"> <strong>Voto:</strong></span>  {{{vote_average}}}  </li>
           <li class="overview"><strong>Descrizione:</strong> {{overview}}  </li>
+        </ul>
+      </div>
+
+
+    </script> -->
+
+    <script id="entry-template" type="text/x-handlebars-template">
+
+      <div class="item">
+        <ul list-item="{{movie}}" class="b">
+          <li class="poster">{{{poster_path}}}</li>
+          <div class="overlay">
+            <li class="title"> <strong>Titolo: </strong> {{title}} </li>
+            <li class="original_title"><strong>Titolo orignale:</strong>{{original_title}}</li>
+            <li class="tipo"><strong>{{tipo}}</strong></li>
+            <li class="original_language flag"> <strong>Lingua:</strong> {{{original_language}}}</li>
+            <li class="vote_average y"> <span class="b"> <strong>Voto:</strong></span>  {{{vote_average}}}  </li>
+            <li class="overview"><strong>Descrizione:</strong> {{overview}}  </li>
+          </div>
         </ul>
       </div>
 
