prova divisione serie e tv.

--- a/index.html
+++ b/index.html
@@ -15,35 +15,25 @@
       <div class="box">
         <h1>BOOLFLIX</h1>
         <div class="search-bar">
-          <input id="input" type="text" name="input" value="input" placeholder="Search movie">
+          <input id="input" type="text" name="input" value="" placeholder="Search movie">
           <button id="search" type="button" name="button">Search</button>
         </div>
       </div>
     </header>
 
-    <!-- <input id="input" type="text" name="input" value="input" placeholder="Search movie">
-    <button id="search" type="button" name="button">Search</button> -->
 
     <div class="container clearfix">
+      <!-- <h2 class="b">Film:</h2>
+      <div class="film container">
+
+      </div>
+      <h2 class="b">Serie Tv:</h2>
+      <div class="tv container">
+
+      </div> -->
 
     </div>
 
-    <!-- <script id="entry-template" type="text/x-handlebars-template">
-
-      <div class="item">
-        <ul list-item="{{movie}}" class="b">
-          <li class="poster">{{{poster_path}}}</li>
-          <li class="title"> <strong>Titolo: </strong> {{title}} </li>
-          <li class="original_title"><strong>Titolo orignale:</strong>{{original_title}}</li>
-          <li class="tipo"><strong>{{tipo}}</strong></li>
-          <li class="original_language flag"> <strong>Lingua:</strong> {{{original_language}}}</li>
-          <li class="vote_average y"> <span class="b"> <strong>Voto:</strong></span>  {{{vote_average}}}  </li>
-          <li class="overview"><strong>Descrizione:</strong> {{overview}}  </li>
-        </ul>
-      </div>
-
-
-    </script> -->
 
     <script id="entry-template" type="text/x-handlebars-template">
 
