--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         </div>
       </div>
     </header>
+    <div class="back">
+      <div class="container clearfix">
+        <!-- <h2 class="b">Film:</h2>
+        <div class="film container">
 
+        </div>
+        <h2 class="b">Serie Tv:</h2>
+        <div class="tv container">
 
-    <div class="container clearfix">
-      <!-- <h2 class="b">Film:</h2>
-      <div class="film container">
+        </div> -->
 
       </div>
-      <h2 class="b">Serie Tv:</h2>
-      <div class="tv container">
-
-      </div> -->
-
     </div>
 
 
@@ -44,7 +44,7 @@
             <li class="title"> <strong>Titolo: </strong> {{title}} </li>
             <li class="original_title"><strong>Titolo orignale:</strong>{{original_title}}</li>
             <li class="tipo"><strong>{{tipo}}</strong></li>
-            <li class="original_language flag"> <strong>Lingua:</strong> {{{original_language}}}</li>
+            <li class="original_language flag"><strong>Lingua:</strong> {{{original_language}}} </li>
             <li class="vote_average y"> <span class="b"> <strong>Voto:</strong></span>  {{{vote_average}}}  </li>
             <li class="overview"><strong>Descrizione:</strong> {{overview}}  </li>
           </div>
